# claw-code

./: USAGE.md
docs/: bedrock-discovery-api-strategy.md  bedrock-test-plan.md  prd-bedrock-provider.md
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/src/providers/: bedrock.rs  mod.rs
rust/crates/api/tests/: bedrock_integration.rs
rust/crates/mock-bedrock-service/: Cargo.toml
rust/crates/mock-bedrock-service/src/: lib.rs  main.rs
rust/crates/rusty-claude-cli/src/: main.rs
