[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["bedrock"]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-sdk-bedrock"]

[dependencies]
aws-config = { version = "1", optional = true }
aws-sdk-bedrock = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mock-bedrock-service = { path = "../mock-bedrock-service" }

[lints]
workspace = true

[[bench]]
name = "request_building"
harness = false
